Update with all invites.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,8 @@
     </main>
 
     <footer class="text-muted text-center">
-      <p>Built by the groom.</p>
+      <p>Built by the groom. <small>If you have any issues shoot me an email at <%= link_to "kevinjamescoleman.7@gmail.com", "mailto:kevinjamescoleman.7@gmail.com" %></small>.</p>
+      
     </footer>
   </body>
 </html>
