--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -54,6 +54,7 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJI_ClXVV424ARXhiBP
       <dl class="row">
         <dt class="col-sm-4">Accommodations</dt> 
         <dd class="col-sm-8">
+          Coming soon...
         </dd> 
       </dl> 
     </div>
