--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,8 @@
 </div>
 
 
-<div class="jumbotron jumbotron-fluid story-holder text-center">
-  <iframe src="/reveal" width="80%" height="750" frameBorder="0"></iframe>
+<div class="jumbotron jumbotron-fluid story-holder text-center" style="color: white;">
+  <h1 class="display-4 text-center">Our story</h1>
+  <p class="lead text-center">Watch a slideshow of our story.</p>
+  <%= link_to 'View Slideshow', reveal_path, class: 'btn btn-primary btn-white btn-lg' %>
 </div>
