--- a/app/views/reveal/_slide.html.erb
+++ b/app/views/reveal/_slide.html.erb
@@ -1,4 +1,5 @@
 <section>
+  <p><%= link_to 'Back to main site', root_path %></p>
   <% if defined?(header) %>
     <h1><%= header %></h1>
   <% end %>
