--- a/app/views/reveal/show.html.erb
+++ b/app/views/reveal/show.html.erb
@@ -15,7 +15,7 @@
 				<%= render 'slide', header: 'Our Story',													
 														paragraph: 'We met in a hopeless place: ATO, a dilapidated college house.',
 														image: 'https://pbs.twimg.com/media/ByvyoUpCMAASqJX.jpg' %>
-				<%= render 'slide', paragraph: 'We played played beer pong. (Kevin won..twice)',
+				<%= render 'slide', paragraph: 'We played beer pong. (Kevin won..twice)',
 														image: 'http://collegexperience.net/wp-content/uploads/2016/11/beer-pong.jpg' %>
 				<%= render 'slide', paragraph: 'She made a Lord of the Rings quote.',
 														image: 'http://s2.quickmeme.com/img/69/6926853b67558cc8275646e96cf9d8dcadd868b239c30fbc4181492671b9d508.jpg' %>
@@ -25,7 +25,7 @@
 														image: 'https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/1392477_706207699389392_118815194_n.jpg?oh=58883023af96ccf06b96cfa09292848b&oe=5AD856C7' %>
 				<%= render 'slide', paragraph: 'And then Nikki was off to South Africa for 6 months.',
 														image: 'https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/10491974_10152897239612990_6608721019176963185_n.jpg?oh=2b6b5f5c79becb66f2264055444497fe&oe=5B1EB564' %>
-				<%= render 'slide', paragraph: 'Halfway through, we were luckily enough to spend a week together when Kevin visited Nikki for Spring Break.',
+				<%= render 'slide', paragraph: 'Halfway through, we were lucky enough to spend a week together when Kevin visited Nikki for Spring Break.',
 														image: 'https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/969375_778694102140751_206056067_n.jpg?oh=bec09cb76c4270f4414d7abe789e6e9b&oe=5AE8A4E6' %>
 				<%= render 'slide', paragraph: 'A couple long months later, we were reunited and back in LA. We had a ton of adventures, and it was like no time had passed ❤️',
 														image: 'https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/10556534_10152703669602990_4594921630271388917_n.jpg?oh=bd4cea9c4c5d4468f51eb180b23f40a1&oe=5B20E7B3' %>
