Cleanup a little more, remove emojis.

--- a/app/views/reveal/show.html.erb
+++ b/app/views/reveal/show.html.erb
@@ -43,7 +43,7 @@
 														image: "https://scontent-dft4-2.xx.fbcdn.net/v/t31.0-8/13585135_1260600263950130_3576420134661767202_o.jpg?oh=8351809bcba57df2dbed671b1bf9de94&oe=5AE56EE5" %>
 				<%= render 'slide', paragraph: 'Before we knew it, we\'d been together for 3 years! When we were celebrating the occasion Kevin popped the question and Nikki said yes on September 12, 2016.',
 														image: 'https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/14291682_1314862648523891_3275720795008286664_n.jpg?oh=3cf772b279103340d6f3df56d223f6b0&oe=5B22C0A9' %>
-				<%= render 'slide', paragraph: 'And now we are so excited to celebrate our special day with you! 👰🏼💍💐' %>
+				<%= render 'slide', paragraph: 'And now we are so excited to celebrate our special day with you!' %>
 			</div>
 		</div>
 		<script>
