--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -49,16 +49,63 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJI_ClXVV424ARXhiBP
     </div> 
   </div>
   <hr />
-  <div class="row">
-    <div class="col-sm-8">
+  <div class="row text-center">
+    <div class="col-sm-12">
       <dl class="row">
-        <dt class="col-sm-4">Accommodations</dt> 
+        <dt class="col-sm-4">Room Block</dt> 
         <dd class="col-sm-8">
-          Coming soon...
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="card accommodation">
+                <div class="card-body">
+                  <h5 class="card-title">Holiday Inn Express</h5>
+                  <p class="card-text">We have 15 rooms at <mark>The Holiday Inn Express</mark> in Temecula. Book with the code <mark>COL</mark>.</p>
+                  <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/find-hotels/hotel/rooms?qCiMy=32018&qCiD=21&qCoMy=32018&qCoD=22&qAdlt=1&qChld=0&qRms=1&qRtP=6CBARC&qGrpCd=COL&qSlH=TZCLA&qAkamaiCC=US&qSrt=sBR&qBrs=ic.ki.ul.in.cp.vn.hi.ex.cv.rs.cw.sb.ma&qWch=0&qSmP=1" class="btn btn-primary">Book now</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </dd> 
       </dl> 
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-12">
+      <dl class="row">
+        <dt class="col-sm-4">Other Local Accommodations</dt> 
+        <dd class="col-sm-8">
+          <div class="row">
+            
+            <div class="col-md-12 col-lg-4">
+              <div class="card accommodation">
+                <div class="card-body">
+                  <h5 class="card-title">Marriot Suites</h5>
+                  <a href="https://www.marriott.com/hotels/travel/ONTST-springhill-suites-temecula-valley-wine-country/" class="btn btn-primary">Book now</a>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-12 col-lg-4">
+              <div class="card accommodation">
+                <div class="card-body">
+                  <h5 class="card-title">The Hotel Temecula</h5>
+                  <a class="btn btn-primary" href="https://www.priceline.com/stay/search/details/63826404/20180421/20180422/1?returnUrl=%2Fstay%2Fsearch%2Fhotels%2F3000002374%2F20180421%2F20180422%2F1%2F%3FpreferredHotelIds%3D63826404%26utm_medium%3DSHOP_PPC%26utm_source%3DPLGOOGLEMSS%26utm_campaign%3DHList%26utm_content%3DMETA%26utm_term%3DUS_HP%257C63826404_localuniversal_1%257C20180421%257Cdesktop%257Cuserdate%257Cpublic%26refid%3DPLGOOGLEMSS%26refclickid%3DUS_HP%257C63826404_localuniversal_1%257C20180421%257Cdesktop%257Cuserdate%257Cpublic%26prefSource%3DEXTERNAL%26currency%3DUSD%26displayedExchangeRate%3D1.0000%26displayedCurr%3DUSD%26displayedCurrPrice%3D308.00%26displayedTaxFees%3D33.00%26pOSCountryCode%3DUS%26taxDisplayMode%3DBP%26price%3D275.00%26taxfees%3D33.00%26minPrice%3D275.00%26minTaxesFees%3D33.00%26RateIdentifier%3DDE91036B5C6769BF8EEFD279D33AF0FE77A3D5D4C3FFB9FFBECAE5B4CF4108B616FF27E9A87650BD6027541551F6E8887EA3048807BEE935%26minRateIdentifier%3DDE91036B5C6769BF8EEFD279D33AF0FE77A3D5D4C3FFB9FFBECAE5B4CF4108B616FF27E9A87650BD6027541551F6E8887EA3048807BEE935%26transactionId%3D614f587b9b99b8c2527600da4309e925%26propFees%3D0.00%26minPropFees%3D0.00%26slingshot%3D1404%26page%3D1&pclnId=786CD7CE20C4D5C1C898E3455CEDCABFDFBDF84FC3212F9F7ED530D0E4EE9A46DE91036B5C6769BF8EEFD279D33AF0FE77A3D5D4C3FFB9FF42F8DF7D2F91A73528309EA08DBCCFF8&meta-id=J7TxOZyNnNDKAUVDSkj_H7iIUSeml2wj6xFPfmdVHyi5yjRYXBM-j-lh3_-V_9dFBxMr99KMTBg4D_irGNj8VOmRtWppoP3cO7uc_KWKC44Ps3U-MD9SuRj1bU3Qxn7DTWd4Fv59HZnL2T0y8ss391Dx2WHmzfwQ1uzF0_3k_vySmtaGKvZSxObTWxYCwBYzhLWrr2C7XYaDyyVQV1F2iCPxkyHMHeBaAoxMa9UN9YtrGpkmLVTmdnTjWFFs1VurMVitqXhkk38FmkYGsL6smJm7-1pPftxjONNSM8GF2rOckYt6-H4EX5EWV7i8E-xwv3uwO1ff1HxTvDYDAoTC_OkHq2jFwE4cFUp7qjTNN-UO7tvzGTsPf_MFaRzTFkGQCOBFiuM-hOShI1Pxjli0N08yHaAIsRHtxxLYv5RxcCOb6uln4uNqFAFV7_YF5l7kKI5MIb5zhrBQOCEFj3hWluGTDKb6lVZQMWLWMSyx9AI&preferred-rate-id=DE91036B5C6769BF8EEFD279D33AF0FE77A3D5D4C3FFB9FFBECAE5B4CF4108B616FF27E9A87650BD6027541551F6E8887EA3048807BEE935">Book now</a>                  
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-12 col-lg-4">
+              <div class="card accommodation">
+                <div class="card-body">
+                  <h5 class="card-title">Extended Stay</h5>
+                  <a href="https://www.expedia.com/Hotel-Search?MDPCID=US.META.HPA.HOTEL-CORESEARCH-localuniversal-ROOMBUNDLE.HOTEL.desktop&langid=1033&mdpdtl=HTL.876829.20180421.20180422.DDF.73.CID.&mctc=10&startDate=4/21/2018&endDate=4/22/2018&selected=876829&paandi=true" class="btn btn-primary">Book now</a>
+                </div>
+              </div>
+            </div>
+            
+            <hr />            
+            <p class='text-center'>There are also a ton of other hotel options, including wineries like <a href="https://www.southcoastwinery.com/">South Coast</a> and <a href="http://innateuropavillage.com/">The Inn at Europa Village</a> in the area, and we've had a lot of luck with AirBNBs as well, like <a href="https://www.airbnb.com/rooms/9597640">this quaint one on a farm</a>.</p>
+          </div>
+        </dd> 
+      </dl> 
     </div>
   </div>
 </div>
