Add honeymoon registry.

--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -2,7 +2,7 @@
   <h1 class='text-center'>Check out our registries!</h1>
   <hr />
   <div class='row'>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <%= link_to 'https://www.westelm.com/registry/9pxn9c7xfz/registry-list.html?cm_Type=gnav' do %>
         <div class="card">
           <%= image_tag 'crate_and_barrel.png', class: "card-img-top" %>
@@ -13,7 +13,7 @@
         </div>
       <% end %>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <%= link_to 'https://www.westelm.com/registry/9pxn9c7xfz/registry-list.html?cm_Type=gnav' do %>
         <div class="card">
           <%= image_tag 'West-Elm.png', class: "card-img-top" %>
@@ -24,7 +24,7 @@
         </div>
       <% end %>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <!-- Anthro -->
       <%= link_to 'https://www.anthropologie.com/registry/listing?registryId=YTEXMDY3MDGZ' do %>
         <div class="card">
@@ -32,6 +32,20 @@
           <hr />
           <div class="card-body">
             <%= link_to 'Registry', 'https://www.anthropologie.com/registry/listing?registryId=YTEXMDY3MDGZ', class: 'btn btn-primary' %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-md-3">
+      <!-- Anthro -->
+      <%= link_to 'https://www.zola.com/registry/kevin-nikki' do %>
+        <div class="card">
+          <div style='margin: auto;'>
+            <%= image_tag 'https://travel.usnews.com/static-travel/images/destinations/279/bali_pura_ulun_danu_bratan_temple_sun_getty_afriandi.jpg', class: "card-img-top", style: 'display: block; width: 49%; margin: auto;' %>
+          </div>
+          <hr />
+          <div class="card-body">
+            <%= link_to 'Bali Honeymoon Registry', 'https://www.zola.com/registry/kevin-nikki', class: 'btn btn-primary' %>
           </div>
         </div>
       <% end %>
