--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -18,6 +18,14 @@
         </dd> 
       </dl>
       <dl class="row">
+        <dt class="col-sm-4">What to wear</dt> 
+        <dd class="col-sm-8">
+          <p class="lead"> 
+            Semi-formal
+          </p>
+        </dd> 
+      </dl>
+      <dl class="row">
         <dt class="col-sm-4">Who</dt> 
         <dd class="col-sm-4">
           <h3>Bridesmaids:</h3>
